vlftool_24_hour_fcn/southpole_summary_grabber/southpole_summary_grabber.log
  File "southpole_summary_grabber.py", line 16
    class TrdsPass():
                   ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "southpole_summary_grabber.py", line 13, in <module>
    import paramiko # For more complicated SFTP stuff
ImportError: No module named paramiko
Traceback (most recent call last):
  File "southpole_summary_grabber.py", line 13, in <module>
    import paramiko # For more complicated SFTP stuff
ImportError: No module named paramiko
Traceback (most recent call last):
  File "southpole_summary_grabber.py", line 13, in <module>
    import paramiko # For more complicated SFTP stuff
ImportError: No module named paramiko
*** Current time is 2010-12-16 21:43:04.682781 UTC (2010-12-16 13:43:04.682794 local).
Satellite is not up. Next TDRS pass is at 2010-12-17 00:22:00 UTC (2:38:55.225847 from now).
*** Current time is 2010-12-16 21:53:52.930157 UTC (2010-12-16 13:53:52.930171 local).
Satellite is not up. Next TDRS pass is at 2010-12-17 00:22:00 UTC (2:28:06.972023 from now).
*** Current time is 2010-12-17 00:08:01.288750 UTC (2010-12-16 16:08:01.288763 local).
Satellite is not up. Next TDRS pass is at 2010-12-17 00:22:00 UTC (0:13:58.410056 from now).
/array/home/vlf-sftp/scott_outbox/southpole_summary_grabber/southpole_summary_grabber.sh: line 7: python: command not found
/array/home/vlf-sftp/scott_outbox/southpole_summary_grabber/southpole_summary_grabber.sh: line 7: python: command not found
/array/home/vlf-sftp/scott_outbox/southpole_summary_grabber/southpole_summary_grabber.sh: line 7: python: command not found
/array/home/vlf-sftp/scott_outbox/southpole_summary_grabber/southpole_summary_grabber.sh: line 7: python: command not found
